--- a/views/teams/team.hbs
+++ b/views/teams/team.hbs
@@ -3,6 +3,7 @@
     {{#content "styles" mode="append"}}
         <link rel="stylesheet" href="/styles/teams/teams.css"/>
         <link rel="stylesheet" href="/styles/files/files.css"/>
+        <link rel="stylesheet" href="/styles/teams/team.css"/>
         <link rel="stylesheet" href="/vendor/jquery/jquery-ui.css"/>
     {{/content}}
 
