I dont like closing tags

--- a/views/teams/team.hbs
+++ b/views/teams/team.hbs
@@ -16,7 +16,7 @@
     {{/content}}
 
     {{#content "page"}}
-     <div id="team-wrapper"></div>
+     <div id="team-wrapper">
 
         <section class="section-teams" data-id="{{../_id}}">
 
