nc-15 adding rss feed. work in progress. pure visual state. integration with admin panel and database is coming.

--- a/views/lib/components/sc-card.hbs
+++ b/views/lib/components/sc-card.hbs
@@ -1,5 +1,7 @@
 <article class="sc-card">
-    <a href="{{this.url}}" rel="canonical" class="sc-card-header" {{#if this.background}}style="background:{{this.background}};"{{/if}}>
+    <a href="{{this.url}}" rel="canonical" class="sc-card-header" 
+    {{#if this.background}} style="background:{{this.background}};" {{/if}} 
+    {{#if external}} class="external-link" data-external-link="{{url}}" {{/if}}>
         <span class="sc-card-title">
             <span class="title">{{{ stripOnlyScript this.title }}}</span>
             {{#if this.secondaryTitle}}
@@ -36,7 +38,7 @@
         {{truncateHTML (conflictFreeHtml this.content)}}
     </div>
     <div class="sc-card-footer">
-        <a href="{{url}}" rel="canonical">{{{link-text}}}</a>
+        <a {{#if external}} class="external-link" data-external-link="{{url}}" {{/if}} rel="canonical" href="{{url}}">{{{link-text}}}</a>
         {{#if additionalInfoName}}
             <div class="additionalInfo" >
                 {{> (concat 'lib/sc-card_additionalInfo/' additionalInfoName) }}
