--- a/views/news/overview.hbs
+++ b/views/news/overview.hbs
@@ -1,16 +1,29 @@
 {{#extend "news/news"}}
+    {{#content "scripts" mode="append"}}
+        <script src="/scripts/content.js" type="text/javascript" defer></script>
+    {{/content}}
     {{#content "page"}}
+
         <div class="route-news">
-                {{#userHasPermission "SCHOOL_NEWS_EDIT"}}
-                    <a href="/news/new" class="btn btn-primary btn-add create pull-right mb-1">
-                        <i class="fa fa-plus" aria-hidden="true"></i> News hinzufügen
-                    </a>
-                {{/userHasPermission}}
+            
+            {{#userHasPermission "SCHOOL_NEWS_EDIT"}}
+                <a href="/news/new" class="btn btn-primary btn-add create pull-right mb-1">
+                    <i class="fa fa-plus" aria-hidden="true"></i> News hinzufügen
+                </a>
+            {{/userHasPermission}}
+
             {{> 'dashboard/components/card_section' section-id="news" title="" content=news link-text="Weiterlesen"}}
+
             <div class="container">
                 {{> "lib/components/pagination" settings=pagination }}
             </div>
+
         </div>
+        {{#embed "lib/components/modal" class="external-link-modal"}}
+            {{#content "body"}}
+                {{> "content/forms/form-external-link"}}
+            {{/content}}
+        {{/embed}}
         {{#embed "lib/components/modal" class="delete-modal" title="Bist du dir sicher?"}}
             {{#content "body"}}
                 <div class="modal-footer">
