--- a/views/administration/forms/form-ldap-edit.hbs
+++ b/views/administration/forms/form-ldap-edit.hbs
@@ -53,7 +53,7 @@
 <hr>
 <div class="row">
     <div class="form-group col-sm-6 col-xs-12">
-        <h5>Nutzer-Attribute <i class="fa fa-question-circle"></i></h5>
+        <h5>Nutzer-Attribute <i class="fa fa-question-circle" data-toggle="tooltip" title="This symbolizes your being locked inside"></i></h5>
     </div>
     <div class="form-group col-sm-6 col-xs-12">
         <i id="user-section-toggle" class="fa fa-lock fa-3x"></i>
