--- a/views/lib/components/sc-card.hbs
+++ b/views/lib/components/sc-card.hbs
@@ -1,13 +1,9 @@
 <article class="sc-card">
-    <a href="{{url}}" rel="canonical"  
+    <a href="{{url}}" rel="canonical" class="sc-card-header" 
         {{#if this.background}} 
             style="background:{{this.background}};" 
-        {{/if}} 
-        {{#if external}} 
-            class="sc-card-header external-link" data-external-link="{{url}}" 
-        {{else}} 
-            class="sc-card-header" 
-        {{/if}}>
+        {{/if}}
+    >
         <span class="sc-card-title">
             <span class="title">{{{ stripOnlyScript this.title }}}</span>
             {{#if this.secondaryTitle}}
@@ -44,7 +40,7 @@
         {{truncateHTML (conflictFreeHtml this.content)}}
     </div>
     <div class="sc-card-footer">
-        <a  rel="canonical" href="{{url}}" {{#if external}} class="external-link" data-external-link="{{url}}" {{/if}}>
+        <a  rel="canonical" href="{{url}}">
             {{{link-text}}}
         </a>
         {{#if additionalInfoName}}
