--- a/views/topic/components/content-resources.hbs
+++ b/views/topic/components/content-resources.hbs
@@ -1,4 +1,4 @@
-<h4>{{{stripOnlyScript title}}}</h4>
+<h4>{{title}}</h4>
 
 <div class="card-columns">
 
@@ -7,10 +7,10 @@
             <div class="card-block">
                 <h4 class="card-title">
                     <a href="{{url}}" target="_blank">
-                        {{{stripOnlyScript title}}}
+                        {{title}}
                     </a>
                 </h4>
-                <p class="card-text">{{{stripOnlyScript description}}}</p>
+                <p class="card-text">{{description}}</p>
             </div>
             <div class="card-footer">
                 <small class="text-muted">via {{client}}</small>
