--- a/views/topic/components/content-geoGebra.hbs
+++ b/views/topic/components/content-geoGebra.hbs
@@ -1,4 +1,4 @@
-<h4>{{{stripOnlyScript title}}}</h4>
+<h4>{{title}}</h4>
 
 <script src="/vendor/geoGebra/deployggb.js"></script>
 <div id="applet_container_{{this._id}}"></div>
