--- a/views/files/lool.hbs
+++ b/views/files/lool.hbs
@@ -24,8 +24,8 @@
         </div>
         {{#if libreOfficeUrl}}
             <div class="alert alert-warning">
-                <p class="card-text">Falls es zu Problemen mit der flüßigen Darstellung kommt oder eine Funktion in LibreOffice Online nicht funktioniert, dann versuchen Sie doch bitte einmal folendes:</p>
-                <a href="{{libreOfficeUrl}}" target="_blank">LibreOffice Online in einem externen Fenster öffnen</a>
+                <p class="card-text">💡 TIPP: Öffne das LibreOffice-Dokument in einem eigenen Fenster, um die Performance zu verbessern</p>
+                <a class="btn btn-secondary" href="{{libreOfficeUrl}}" target="_blank">Dokument in neuem Fenster öffnen</a>
             </div>
         {{/if}}
     {{/content}}
