--- a/views/lib/default.hbs
+++ b/views/lib/default.hbs
@@ -4,14 +4,14 @@
     <title>{{#if title}}{{title}} - {{/if}}{{theme.title}}</title>
 	<!--
 		01001000 01010000 01001001  01010011 01100011 01101000 01110101 01101100 00101101 01000011 01101100 01101111 01110101 01100100
-		 __  __  ____    ______      _____           __               ___            _____   ___                       __     
-		/\ \/\ \/\  _`\ /\__  _\    /\  __`\        /\ \             /\_ \          /\  __`\/\_ \                     /\ \    
-		\ \ \_\ \ \ \_\ \/_/\ \/    \ \,\_\_\    ___\ \ \___   __  __\//\ \         \ \ \/\_\//\ \     ___   __  __   \_\ \   
-		 \ \  _  \ \ ,__/  \ \ \     \/_\___ \  /'___\ \  _ `\/\ \/\ \ \ \ \   ______\ \ \/_/_\ \ \   / __`\/\ \/\ \  /'_` \  
-		  \ \ \ \ \ \ \/    \_\ \__    /\ \_\ \/\ \__/\ \ \ \ \ \ \_\ \ \_\ \_/\_____\\ \ \_\ \\_\ \_/\ \_\ \ \ \_\ \/\ \_\ \ 
+		 __  __  ____    ______      _____           __               ___            _____   ___                       __
+		/\ \/\ \/\  _`\ /\__  _\    /\  __`\        /\ \             /\_ \          /\  __`\/\_ \                     /\ \
+		\ \ \_\ \ \ \_\ \/_/\ \/    \ \,\_\_\    ___\ \ \___   __  __\//\ \         \ \ \/\_\//\ \     ___   __  __   \_\ \
+		 \ \  _  \ \ ,__/  \ \ \     \/_\___ \  /'___\ \  _ `\/\ \/\ \ \ \ \   ______\ \ \/_/_\ \ \   / __`\/\ \/\ \  /'_` \
+		  \ \ \ \ \ \ \/    \_\ \__    /\ \_\ \/\ \__/\ \ \ \ \ \ \_\ \ \_\ \_/\_____\\ \ \_\ \\_\ \_/\ \_\ \ \ \_\ \/\ \_\ \
 		   \ \_\ \_\ \_\    /\_____\   \ `\____\ \____\\ \_\ \_\ \____/ /\____\/_____/ \ \____//\____\ \____/\ \____/\ \___,_\
 		    \/_/\/_/\/_/    \/_____/    \/_____/\/____/ \/_/\/_/\/___/  \/____/         \/___/ \/____/\/___/  \/___/  \/__,_ /
-                                                                                                                                                                                           
+
 		Mit Node, React und Feathers verknüpfst du eher die Sprache Javascript als Englisch? Du suchst ein junges Team, lockere Atmosphäre und flache Hierarchien? Dann schau dir unsere Stellen an: https://schul-cloud.org/community#jobs
 	-->
     {{#block "meta"}}
@@ -46,6 +46,7 @@
     {{#block "scripts"}}
         {{#embed "lib/sw-metrix"}}{{/embed}}
         <script src="/scripts/all.js" type="text/javascript" defer></script>
+        <script src="/vendor-optimized/turbolinks/turbolinks.js"></script>
     {{/block}}
 
 </head>
