--- a/static/vue-components/styles/typography.scss
+++ b/static/vue-components/styles/typography.scss
@@ -12,10 +12,21 @@ h1 {
   align-content: bottom;
 }
 
+h2 {
+  font-size: 30px;
+  font-weight: bold;
+  font-family: "PT Sans Caption";
+  align-content: bottom;
+}
+
 h3 {
   font-size: 20px;
   font-weight: bold;
   font-family: "PT Sans Narrow";
+}
+
+h1,h2,h3.medium-emphasis {
+  color: #505050;
 }
 
 input,
