fixed requested changes in the bachelorproject's team page (new)

--- a/static/styles/team/team.scss
+++ b/static/styles/team/team.scss
@@ -159,6 +159,9 @@
     color: #000;
     font-size: 2em;
   }
+  .person-title[descr="Schaarschmidt"] {
+	letter-spacing: -1px;
+  }
   .person-desc {
     color: rgba(0, 0, 0, 0.4);
     margin-top: 10px;
