--- a/views/team/team.hbs
+++ b/views/team/team.hbs
@@ -26,7 +26,7 @@
                                             </div>
                                         </div>
                                         <div class="col-md-7">
-                                            <h2 class="person-title" style="text-align: left">{{title}} {{firstName}} {{lastName}}</h2>
+                                            <h2 class="person-title" descr="{{lastName}}" style="text-align: left">{{title}} {{firstName}} {{lastName}}</h2>
                                             <h5 class="person-desc" style="text-align: left">{{position}}</h5>
                                             <p style="text-align: left">{{{description}}}</p>
                                         </div>
@@ -48,7 +48,7 @@
                             <div class="card h-100 person">
                                 <img class="card-img-top circular" src="{{pictureUrl}}">
                                 <div class="card-block">
-                                    <h4 class="person-title card-title">{{firstName}} {{lastName}}</h4>
+                                    <h4 class="person-title card-title" descr="{{lastName}}">{{firstName}} {{lastName}}</h4>
                                     <p class="person-desc card-text">{{position}}</p>
                                 </div>
                             </div>
