--- a/static/styles/courses/course.scss
+++ b/static/styles/courses/course.scss
@@ -204,7 +204,8 @@
 }
 
 .card-topic.card-transparent{
-  opacity: 0.6;
+  -webkit-filter: grayscale(100%) opacity(0.7);
+  filter: grayscale(100%) opacity(0.7);
 }
 
 .topic {
