--- a/static/styles/lib/sc-theme/sc-card.scss
+++ b/static/styles/lib/sc-theme/sc-card.scss
@@ -11,6 +11,18 @@
     overflow: hidden;
     transition: 0.3s;
     box-shadow: 0 2px 6px 0 rgba(0,0,0,0.2);
+    position: relative;
+
+    .rss-icon {
+        color: rgba(255, 255, 255, 0.7);
+        pointer-events: none;
+        position: absolute;
+        top: 8px;
+        right: 8px;
+        z-index: 10;
+        font-weight: bold;
+    }
+
     .sc-card-header {
         display: flex;
         flex-direction: row;
