--- a/views/lib/components/sc-card.hbs
+++ b/views/lib/components/sc-card.hbs
@@ -1,34 +1,34 @@
 <article class="sc-card">
-    <a href="{{this.url}}" rel="canonical" class="sc-card-header" {{#if this.background}}style="background:{{this.background}};"{{/if}}>
+    {{#if this.isRSS}}
+    {{#userHasPermission "SCHOOL_NEWS_EDIT"}}
+    <span class="rss-icon">RSS</span>
+    {{/userHasPermission}}
+    {{/if}}
+    <a href="{{this.url}}" rel="canonical" class="sc-card-header" {{#if this.background}} style="background:{{this.background}};"
+        {{/if}}>
         <span class="sc-card-title">
             <span class="title">{{{ stripOnlyScript this.title }}}</span>
             {{#if this.secondaryTitle}}
-                <small class="d-block">{{{ stripOnlyScript this.secondaryTitle }}}</small>
+            <small class="d-block">{{{ stripOnlyScript this.secondaryTitle }}}</small>
             {{/if}}
         </span>
 
         <div class="sc-card-menu">
             {{#each this.actions}}
-                {{#if this.method}}
-                        <button class="sc-card-menu-action {{this.class}}"
-                           
-                           target="_blank"
-                           data-method="DELETE"
-                           data-name="{{../title}}"
-                           alt="'{{../title}}' löschen">
-                            <i class="fa fa-{{this.icon}}"></i>
-                        </button>
-                {{else}}
-                    <button class="sc-card-menu-action {{this.class}}" 
-                      onClick="window.open({{this.link}})"
-                      alt="'{{../../title}}' {{this.alt}}.">
-                        <i class="fa fa-{{this.icon}}"></i>
-                    </button>
-                {{/if}}
+            {{#if this.method}}
+            <button class="sc-card-menu-action {{this.class}}" target="_blank" data-method="DELETE" data-name="{{../title}}"
+                alt="'{{../title}}' löschen">
+                <i class="fa fa-{{this.icon}}"></i>
+            </button>
             {{else}}
-                {{#if this.menuInfo}}
-                    <small class="sc-card-menu-info">{{{this.menuInfo}}}</small>
-                {{/if}}
+            <button class="sc-card-menu-action {{this.class}}" onClick="window.open({{this.link}})" alt="'{{../../title}}' {{this.alt}}.">
+                <i class="fa fa-{{this.icon}}"></i>
+            </button>
+            {{/if}}
+            {{else}}
+            {{#if this.menuInfo}}
+            <small class="sc-card-menu-info">{{{this.menuInfo}}}</small>
+            {{/if}}
             {{/each}}
         </div>
     </a>
@@ -38,9 +38,9 @@
     <div class="sc-card-footer">
         <a href="{{url}}" rel="canonical">{{{link-text}}}</a>
         {{#if additionalInfoName}}
-            <div class="additionalInfo" >
-                {{> (concat 'lib/sc-card_additionalInfo/' additionalInfoName) }}
-            </div>
+        <div class="additionalInfo">
+            {{> (concat 'lib/sc-card_additionalInfo/' additionalInfoName) }}
+        </div>
         {{/if}}
     </div>
 </article>
