make administration consistent with sidebar items

--- a/views/administration/dashboard.hbs
+++ b/views/administration/dashboard.hbs
@@ -35,6 +35,17 @@
                             </div>
                         </div>
 
+                        {{#userHasPermission 'ADMIN_VIEW'}}
+                        <div class="col-md-6 col-sm-6 col-xs-12">
+                            <div class="card h-100 teacher-option" onclick="location.href='/administration/courses/'">
+                                <div class="card-block homework">
+                                    <div class="card-text">
+                                        <h4><i class="fa fa-users"></i> Kurse verwalten</h4>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        {{/userHasPermission}}
                         <div class="col-md-6 col-sm-6 col-xs-12">
                             <div class="card h-100 teacher-option" onclick="location.href='/administration/classes/'">
                                 <div class="card-block homework">
@@ -53,8 +64,8 @@
                                     </div>
                                 </div>
                             </div>
-                            {{/userHasPermission}}
                         </div>
+                        {{/userHasPermission}}
                     </div>
                 </div>
                 {{/userHasPermission}}
