--- a/static/styles/team/team.scss
+++ b/static/styles/team/team.scss
@@ -159,7 +159,7 @@
     color: #000;
     font-size: 2em;
   }
-  .person-title[descr="Schaarschmidt"] {
+  .person-title[data-lastname="Schaarschmidt"] {
 	letter-spacing: -1px;
   }
   .person-desc {
