--- a/views/team/team.hbs
+++ b/views/team/team.hbs
@@ -48,7 +48,7 @@
                             <div class="card h-100 person">
                                 <img class="card-img-top circular" src="{{pictureUrl}}">
                                 <div class="card-block">
-                                    <h4 class="person-title card-title" descr="{{lastName}}">{{firstName}} {{lastName}}</h4>
+                                    <h4 class="person-title card-title" data-lastname="{{lastName}}">{{firstName}} {{lastName}}</h4>
                                     <p class="person-desc card-text">{{position}}</p>
                                 </div>
                             </div>
