--- a/views/team/team.hbs
+++ b/views/team/team.hbs
@@ -26,7 +26,7 @@
                                             </div>
                                         </div>
                                         <div class="col-md-7">
-                                            <h2 class="person-title" descr="{{lastName}}" style="text-align: left">{{title}} {{firstName}} {{lastName}}</h2>
+                                            <h2 class="person-title" data-lastname="{{lastName}}" style="text-align: left">{{title}} {{firstName}} {{lastName}}</h2>
                                             <h5 class="person-desc" style="text-align: left">{{position}}</h5>
                                             <p style="text-align: left">{{{description}}}</p>
                                         </div>
