cta template tuning

--- a/static/vue-components/styles/typography.scss
+++ b/static/vue-components/styles/typography.scss
@@ -13,9 +13,9 @@ h1 {
 }
 
 h2 {
-  font-size: 30px;
+  font-size: 40px;
   font-weight: bold;
-  font-family: "PT Sans Caption";
+  font-family: "PT Sans Narrow";
   align-content: bottom;
 }
 
