added news source Description tag

--- a/views/administration/forms/form-rss.hbs
+++ b/views/administration/forms/form-rss.hbs
@@ -4,3 +4,7 @@
     <label>URL des RSS-Feeds</label>
     <input class="form-control" name="rssURL" type="text" value="{{rssURL}}" />
 </div>
+<div class="form-group">
+    <label>Kurzbeschreibung (optional)</label>
+    <input class="form-control" name="description" type="text" value="{{description}}" />
+</div>
