--- a/views/registration/pin.hbs
+++ b/views/registration/pin.hbs
@@ -29,15 +29,15 @@ function initializePin(){
     });
   })
 }
-window.addEventListener("DOMContentLoaded", initializePin)
+window.addEventListener("turbolinks:load", initializePin)
 </script>
 <style>
 .pin-input input.combined-pin{
   display: inline-block;
-  width: 0; 
-  height:0; 
-  border: none; 
-  outline: none; 
+  width: 0;
+  height:0;
+  border: none;
+  outline: none;
 }
 .pin-input .digit{
   display: inline-block;
