--- a/views/files/files-overview.hbs
+++ b/views/files/files-overview.hbs
@@ -32,7 +32,7 @@
                         background="#1989AC"
                     }}
                 </div>
-                {{#if @root/teamsEnabled}}
+                {{#ifEnv FEATURE_TEAMS_ENABLED true}}
                 <div class="sc-card-wrapper col-md-6 col-sm-6 col-xs-12">
                     {{> 'lib/components/sc-card'
                         title='<i class="fa fa-users"></i> Meine Team-Dateien'
@@ -43,7 +43,7 @@
                         background="#1989AC"
                     }}
                 </div>
-                {{/if}}
+                {{/ifEnv}}
                 <div class="sc-card-wrapper col-md-6 col-sm-6 col-xs-12">
                     {{> 'lib/components/sc-card'
                         title='<i class="fa fa-share-alt"></i> Mit mir geteilte Dateien'
